still some issues